force-app/main/default/objects/cgcloud__Custom_Permission_User_Role_Mapping__c/cgcloud__Custom_Permission_User_Role_Mapping__c.object-meta.xml
<CustomObject>
    <description>Assignment (Mapping) of mobility user roles to permission sets.</description>
    <label>Custom Permission User Role Mapping</label>
    <nameField>
        <displayFormat>CPUR-{00000000}</displayFormat>
        <label>Custom Permission User Role Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Permission User Role Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>