force-app/main/default/objects/cgcloud__Custom_Permission_User_Role_Mapping__c/fields/cgcloud__Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Custom_Permission__c</fullName>
    <label>Custom Permission</label>
    <type>TextArea</type>
</CustomField>