force-app/main/default/objects/cgcloud__Custom_Permission_User_Role_Mapping__c/fields/cgcloud__User_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User_Role_Name__c</fullName>
    <label>User Role Name</label>
    <type>TextArea</type>
</CustomField>