force-app/main/default/objects/cgcloud__Custom_Permission_User_Role_Mapping__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>cgcloud__Custom_Permission_Name__c</columns>
    <columns>NAME</columns>
    <columns>cgcloud__User_Role_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>cgcloud__Custom_Permission__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>